trunk/Archive2/34/f291607f89da71/output
main.cpp: In function 'int main(int, char**)':
main.cpp:9:5: error: static assertion failed: 
     static_assert(noexcept(swap(x, y)), "");
     ^
